"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2006-10-04	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-03-instance-00-23-context-03:
	  propagated top-level footprint down through entire
		unroll call subgraph to be able to lookup
		out-of-scope global parameters.  Tons of prototypes updated.
	  unroll_context::lookup_rvalue_collection():
		now tries to lookup top_footprint for globals.  
	  Regressions fixed: parser/param/06{6,7,8,9}, few more left in param/.
	  DO: Cleanup references to "replay_&" methods (delete the obsolete).


2006-10-03	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-03-instance-00-23-context-02:
	  Now distinguishing lvalue from rvalue lookups, using the switch
		RVALUE_LVALUE_LOOKUPS in Object/devel_switches.h.
	  Next: chain context to make top-level context searchable.  


	* HACKT-00-01-04-main-00-80-03-instance-00-23-context-01:
	  unroll_context: separate footprints for looking up, 
		one for instantiating and modifying, the other for 
		just read-only lookups, which may search out-of-context.  
	  Some expected momentary regressions in parser/param.  
	  Marked unroll_context::get_target_footprint() obsolete.  
	  Next: distinguish lvalue from rvalue lookups.  
		Then chain the contexts (global) appropriately.  


2006-10-03	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-03-instance-00-23:
	  Debugging fixes: be able to partially dump collection before
		its type has been completely resolved.  
	  Next: split footprint member of unroll_context to be able to
		chain the contexts without instantiation conflict.  


2006-10-02	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-03-instance-00-22:
	  New switch SEQUENTIAL_SCOPE_INCLUDES_FORMALS -> 0:
		Defined to zero to separate formal instantiations out.