@@ -1,7 +1,7 @@
 /**
 	\file "Object/inst/subinstance_manager.cc"
 	Class implementation of the subinstance_manager.
-	$Id: subinstance_manager.cc,v 1.17.18.2.10.1 2006/10/04 04:15:37 fang Exp $
+	$Id: subinstance_manager.cc,v 1.17.18.2.10.2 2006/10/05 00:58:54 fang Exp $
  */
 
 #define	ENABLE_STACKTRACE		0
@@ -216,27 +216,6 @@ subinstance_manager::connect_port_aliases_recursive(this_type& r) {
 	}
 	return good_bool(true);
 }
-
-//- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-#if 0
-/**
-	Copied from footprint::create_dependent_types
-	and module::create_dependent_types.
-	TODO: rename call to create_dependent_types...
- */
-good_bool
-subinstance_manager::replay_internal_aliases(const footprint& top) const {
-	STACKTRACE_VERBOSE;
-	const_iterator i(subinstance_array.begin());
-	const const_iterator e(subinstance_array.end());
-	for ( ; i!=e ; i++) {
-		// creating dependent types also connects internal aliases
-		if (!(*i)->create_dependent_types(top).good)
-			return good_bool(false);
-	}
-	return good_bool(true);
-}
-#endif
 
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 /**
