@@ -4,10 +4,10 @@ Persistent Object Manager text dump:
 	0	##ADDR##	________	0	#HEAD#	#TAIL#	0
 	1	##ADDR##	module__	0	#HEAD#	#TAIL#	##SIZE##
 	2	##ADDR##	namespc_	0	#HEAD#	#TAIL#	28
-	3	##ADDR##	pintcoll	2	#HEAD#	#TAIL#	173
+	3	##ADDR##	pintplch	0	#HEAD#	#TAIL#	29
 	4	##ADDR##	pintinst	0	#HEAD#	#TAIL#	16
 	5	##ADDR##	crnglst_	0	#HEAD#	#TAIL#	28
-	6	##ADDR##	pintcoll	2	#HEAD#	#TAIL#	173
+	6	##ADDR##	pintplch	0	#HEAD#	#TAIL#	29
 	7	##ADDR##	pintinst	0	#HEAD#	#TAIL#	16
 	8	##ADDR##	crnglst_	0	#HEAD#	#TAIL#	28
 	9	##ADDR##	piassign	0	#HEAD#	#TAIL#	20
@@ -26,7 +26,7 @@ Persistent Object Manager text dump:
 	22	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
 	23	##ADDR##	spimvref	0	#HEAD#	#TAIL#	16
 	24	##ADDR##	loopscop	0	#HEAD#	#TAIL#	24
-	25	##ADDR##	pintcoll	0	#HEAD#	#TAIL#	33
+	25	##ADDR##	pintplch	0	#HEAD#	#TAIL#	29
 	26	##ADDR##	cnstrng_	0	#HEAD#	#TAIL#	16
 	27	##ADDR##	piassign	0	#HEAD#	#TAIL#	20
 	28	##ADDR##	spimvref	0	#HEAD#	#TAIL#	16
@@ -36,6 +36,8 @@ Persistent Object Manager text dump:
 	32	##ADDR##	dindlst_	0	#HEAD#	#TAIL#	20
 	33	##ADDR##	cnstrng_	0	#HEAD#	#TAIL#	16
 	34	##ADDR##	spimvref	0	#HEAD#	#TAIL#	16
+	35	##ADDR##	pintcoll	2	#HEAD#	#TAIL#	164
+	36	##ADDR##	pintcoll	2	#HEAD#	#TAIL#	164
 
 In module created from: ##FILE## (unrolled)
 In namespace "", we have: {
@@ -45,29 +47,33 @@ In namespace "", we have: {
   0 definitions
   0 typedefs
   Parameters:
-    x = pint^2 x
-      unrolled index-value pairs: {
-        [0][0] = 0
-        [0][1] = 1
-        [0][2] = 2
-        [1][0] = 3
-        [1][1] = 4
-        [1][2] = 5
-        [2][0] = 6
-        [2][1] = 7
-        [2][2] = 8
-      }
-    y = pint^2 y
-      unrolled index-value pairs: {
-        [0][0] = 0
-        [0][1] = 3
-        [0][2] = 6
-        [1][0] = 1
-        [1][1] = 4
-        [1][2] = 7
-        [2][0] = 2
-        [2][1] = 5
-        [2][2] = 8
-      }
+    x = pint<> x^2
+    y = pint<> y^2
 }
 
+footprint: {
+  x = pint^2
+    unrolled index-value pairs: {
+      [0][0] = 0
+      [0][1] = 1
+      [0][2] = 2
+      [1][0] = 3
+      [1][1] = 4
+      [1][2] = 5
+      [2][0] = 6
+      [2][1] = 7
+      [2][2] = 8
+    }
+  y = pint^2
+    unrolled index-value pairs: {
+      [0][0] = 0
+      [0][1] = 3
+      [0][2] = 6
+      [1][0] = 1
+      [1][1] = 4
+      [1][2] = 7
+      [2][0] = 2
+      [2][1] = 5
+      [2][2] = 8
+    }
+}
